[project]
name = "coder-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tavily-python>=0.5.0",
    "litellm>=1.81.15",
    "python-dotenv>=1.2.1",
    "rich>=14.3.2",
    "tenacity>=9.1.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
